; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_struct.c_controloptions.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_struct.c_controloptions.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@BIG = common dso_local global i32 0, align 4
@LITTLE = common dso_local global i32 0, align 4
@MAXALIGN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [33 x i8] c"alignment %d is not a power of 2\00", align 1
@.str.1 = private unnamed_addr constant [27 x i8] c"invalid format option '%c'\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i8**, %struct.TYPE_3__*)* @controloptions to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @controloptions(i32* %0, i32 %1, i8** %2, %struct.TYPE_3__* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8**, align 8
  %8 = alloca %struct.TYPE_3__*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8** %2, i8*** %7, align 8
  store %struct.TYPE_3__* %3, %struct.TYPE_3__** %8, align 8
  %11 = load i32, i32* %6, align 4
  switch i32 %11, label %36 [
    i32 32, label %12
    i32 62, label %13
    i32 60, label %17
    i32 33, label %21
  ]

12:                                               ; preds = %4
  br label %43

13:                                               ; preds = %4
  %14 = load i32, i32* @BIG, align 4
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 1
  store i32 %14, i32* %16, align 4
  br label %43

17:                                               ; preds = %4
  %18 = load i32, i32* @LITTLE, align 4
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 1
  store i32 %18, i32* %20, align 4
  br label %43

21:                                               ; preds = %4
  %22 = load i8**, i8*** %7, align 8
  %23 = load i32, i32* @MAXALIGN, align 4
  %24 = call i32 @getnum(i8** %22, i32 %23)
  store i32 %24, i32* %9, align 4
  %25 = load i32, i32* %9, align 4
  %26 = call i32 @isp2(i32 %25)
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %32, label %28

28:                                               ; preds = %21
  %29 = load i32*, i32** %5, align 8
  %30 = load i32, i32* %9, align 4
  %31 = call i32 @luaL_error(i32* %29, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), i32 %30)
  br label %32

32:                                               ; preds = %28, %21
  %33 = load i32, i32* %9, align 4
  %34 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %35 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %34, i32 0, i32 0
  store i32 %33, i32* %35, align 4
  br label %43

36:                                               ; preds = %4
  %37 = load i32*, i32** %5, align 8
  %38 = load i32, i32* %6, align 4
  %39 = call i8* @lua_pushfstring(i32* %37, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.1, i64 0, i64 0), i32 %38)
  store i8* %39, i8** %10, align 8
  %40 = load i32*, i32** %5, align 8
  %41 = load i8*, i8** %10, align 8
  %42 = call i32 @luaL_argerror(i32* %40, i32 1, i8* %41)
  br label %43

43:                                               ; preds = %12, %13, %17, %32, %36
  ret void
}

declare dso_local i32 @getnum(i8**, i32) #1

declare dso_local i32 @isp2(i32) #1

declare dso_local i32 @luaL_error(i32*, i8*, i32) #1

declare dso_local i8* @lua_pushfstring(i32*, i8*, i32) #1

declare dso_local i32 @luaL_argerror(i32*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
